[package]
name = "perfmon"
version = "0.2.2"
authors = ["zhangli.pear <zhangli.pear@bytedance.com>", "Delta4 <delta4chat@gmx.com>"]
edition = "2021"

license-file = "LICENSE"
description = "A toolkit designed to be a foundation for applications to monitor their performance."
repository = "https://github.com/delta4chat/perf-monitor-rs"
documentation = "https://docs.rs/perfmon/"

categories = ["api-bindings", "accessibility", "development-tools"]
keywords = ["perf", "statistics", "monitor", "performance"]


[features]
allocation_counter = []
darwin_private = []
darwin_bindgen = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"]}
num_cpus = "1.16.0"
once_cell = { version = "1.19.0", features = ["portable-atomic", "parking_lot"] }
thiserror = "1.0.57"

[target.'cfg(unix)'.dependencies]
procfs = "0.16.0"
rustix = { version = "0.38.31", features = ["thread", "process"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[target.'cfg(target_vendor="apple")'.dependencies]
mach-sys =  "0.5"

[dev-dependencies]
fastrand = "2.0.1"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"

